<resources>
	<string name="app_name">Time</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

	<string name="card_one_head">你进入校园  %s  天了</string>
	<string name="card_one_subhead">在这个校园，你度过啦</string>
	<string name="card_one_btn">离  别</string>

	<string name="card_two_head">你的校园时光剩下 %s</string>
	<string name="card_two_subhead">在剩下的时光里，你大约还可以</string>
	<string name="card_two_btn">眼  前</string>

	<string name="pick_view_head">你正在读</string>
	<string name="pick_view_btn_yes">确认</string>

	<string name="pick_view_value_1">大一</string>
	<string name="pick_view_value_2">大二</string>
	<string name="pick_view_value_3">大三</string>
	<string name="pick_view_value_4">大四</string>


	<string-array name="pick_values">
		<item>@string/pick_view_value_1</item>
		<item>@string/pick_view_value_2</item>
		<item>@string/pick_view_value_3</item>
		<item>@string/pick_view_value_4</item>
	</string-array>

	<!--fragment_my_wishes-->
	<string name="fragment_my_wishes_test_content1">世界很大,我想去看看，望老板批准啊 !</string>
	<string name="fragment_my_wishes_test_content2">you it will !</string>
	<string name="fragment_my_wishes_test_content3">god beless you !</string>
	<string name="fragment_my_wishes_test_content4">Do you love me ?</string>
	<string name="fragment_my_wishes_test_content5">it is good !</string>

	<string name="menu_time_more">more</string>

	<string name="menu_time_wish">我的心愿</string>
	<string name="menu_time_achievement">我的成就</string>
	<string name="menu_time_skill">我的技能</string>
	<string name="menu_time_reset">重新设置</string>
	<string name="menu_time_about">关于我们</string>
	<string name="menu_time_notification">通知</string>

	<string name="toolbar_pick_photo_title">请选择一个相册</string>
	<string name="toolbar_edit_achievement_title">成就上传</string>

	<string name="achievement_edit_hint">记录一下呗&#8230;</string>

	<string name="my_wish_add_view_cancel_btn">取消</string>
	<string name="my_wish_add_view_sure_btn">确认</string>
	<string name="my_wishes_edit_hint">快来添加你的新愿望吧！</string>

	<string name="menu_achievement_add">添加成就</string>
	<string name="menu_achievement_play">展示成就</string>

	<string name="menu_edit_achievement_ok">确认</string>

	<string name="menu_my_skill_add">添加技能</string>
	<string name="menu_my_wish_add">添加心愿</string>
	<string name="menu_cloud_wish">云上的心愿</string>

	<string name="popup_window_btn_share">分享</string>
	<string name="popup_widow_btn_delete">删除</string>

	<string name="about_us">我们是一群仍在热情学习Android开发的小白开发者们，我们仍会对这个App进行优化升级，敬请期待！若有任何意见，请发送至475384637@qq.com。</string>

	<string name="achievement_empty_text">你的成就列表空空如也\n赶紧点击右上方添加按钮添加你所获的成就吧！</string>

	<string name="skill_empty_text">你的技能列表空空如也\n赶紧点击右上方添加按钮添加你所获的成就吧！</string>

	<item type="id" name="tag_zero">0</item>
	<item type="id" name="tag_first">1</item>
	<item type="id" name="tag_second">2</item>

	<string name="share">分享</string>
	<string name="share_cancel">取消</string>

	<string name="platform_weibo">新浪微博</string>
	<string name="platform_qzone">QQ空间</string>
	<string name="platform_wechat_friends">微信好友</string>
	<string name="platform_wechat_zone">微信朋友圈</string>
	<string name="platform_qq">QQ</string>

	<string name="edit_comment_hint">发表评论</string>

</resources>
