<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Activities.TimeActivity"
	>

	<item
		android:id="@+id/menu_time_notification"
		android:icon="@drawable/ic_notifications_none_black_24dp"
		android:title="@string/menu_time_notification"
		app:showAsAction="ifRoom"
		>
	</item>
	<item
		android:id="@+id/menu_time_more"
		android:icon="@drawable/ic_more_vert_black_24dp"
		android:title="more"
		app:showAsAction="ifRoom">
		<menu>
			<item
				android:id="@+id/menu_time_wish"
				android:icon="@drawable/ic_lamp"
				android:title="@string/menu_time_wish">
			</item>
			<item
				android:id="@+id/menu_time_achievement"
				android:icon="@drawable/ic_medal"
				android:title="@string/menu_time_achievement">
			</item>
			<item
				android:id="@+id/menu_time_skill"
				android:icon="@drawable/ic_graduation"
				android:title="@string/menu_time_skill">
			</item>
			<item
				android:id="@+id/menu_time_reset"
				android:icon="@drawable/ic_setting"
				android:title="@string/menu_time_reset">
			</item>
			<item
				android:id="@+id/menu_time_about"
				android:icon="@drawable/ic_info_black_24dp"
				android:title="@string/menu_time_about">
			</item>
		</menu>
	</item>
</menu>

