<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#e3000000"
	android:orientation="vertical"
	tools:context=".TimeActivity"
	>

	<ImageView
		android:padding="16dp"
		android:src="@drawable/sandy_glass"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="@dimen/card_margin"
		android:layout_marginRight="@dimen/card_margin"
		android:layout_weight="1"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tv_card_two_head"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/card_two_head"
			android:textColor="@color/card_two_head_text_color"
			android:textSize="@dimen/card_head_size"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="20dp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/card_subhead_padding_left"
			android:text="@string/card_two_subhead"
			android:textColor="@color/card_two_subhead_text_color"
			android:textSize="@dimen/card_subhead_size"/>
		<View
			android:layout_width="match_parent"
			android:layout_height="20dp"/>
		<TextView
			android:id="@+id/tv_card_two_cell_1"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/card_subhead_padding_left"
			android:text="在教室"
			android:textColor="@color/card_text_color"/>

		<TextView
			android:id="@+id/tv_card_two_cell_2"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/card_subhead_padding_left"
			android:text="在寝室"
			android:textColor="@color/card_text_color"/>

		<TextView
			android:id="@+id/tv_card_two_cell_3"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/card_subhead_padding_left"
			android:text="在图书馆"
			android:textColor="@color/card_text_color"/>

		<TextView
			android:id="@+id/tv_card_two_cell_4"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/card_subhead_padding_left"
			android:text="在酒店"
			android:textColor="@color/card_text_color"/>

	</LinearLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="72dp">

		<Button
			android:id="@+id/btn_time_now"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@android:color/transparent"
			android:gravity="center"
			android:text="@string/card_two_btn"
			android:textColor="@color/card_two_btn_text_color"
			android:textSize="@dimen/card_btn_text_size"/>
	</FrameLayout>
</LinearLayout>