<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#FFF"
		android:clickable="true"
		android:orientation="vertical"
		>

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar_my_skill"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				app:layout_scrollFlags="scroll|enterAlways"
				app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
				app:subtitle="我的技能"
				app:subtitleTextColor="@color/toolbar_text_color"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.1dp"
				android:background="@color/common_black"/>
		</android.support.design.widget.AppBarLayout>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<com.iec.dwx.timer.Views.ViewDragHelperLayout
				android:id="@+id/fragment_my_skill_viewDragHelperLayout"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				/>

			<LinearLayout
				android:id="@+id/skill_empty_container"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="56dp"
					android:gravity="center"
					android:padding="4dp"
					android:text="@string/skill_empty_text"
					android:textSize="20sp"/>
			</LinearLayout>
		</FrameLayout>
	</LinearLayout>

	<FrameLayout
		android:id="@+id/my_skill_add_view"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/black_overlay">

		<android.support.v7.widget.CardView
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center">

			<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/fragment_my_skill_add_view_style"
				android:orientation="vertical"
				android:paddingBottom="16dp"
				android:paddingLeft="24dp"
				android:paddingRight="24dp"
				android:paddingTop="24dp">

				<EditText
					android:id="@+id/my_skill_add_editText"
					android:layout_width="match_parent"
					android:layout_height="150dp"
					android:background="#FFF"
					android:focusable="true"
					android:gravity="left"
					android:hint="新技能不超过15个字"/>

				<LinearLayout
					style="@android:style/ButtonBar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="#fff"
					android:gravity="end"
					android:orientation="horizontal">

					<Button
						android:id="@+id/my_skill_add_btn_cencel"
						android:layout_width="0dp"
						android:layout_height="36dp"
						android:layout_weight="1"
						android:background="@android:color/transparent"
						android:text="@string/my_wish_add_view_cancel_btn"
						android:textColor="@color/common_black"/>

					<Button
						android:id="@+id/my_skill_add_btn_sure"
						android:layout_width="0dp"
						android:layout_height="36dp"
						android:layout_weight="1"
						android:background="@android:color/transparent"
						android:text="@string/my_wish_add_view_sure_btn"
						android:textColor="@color/common_black"/>
				</LinearLayout>

			</LinearLayout>
		</android.support.v7.widget.CardView>
	</FrameLayout>
</FrameLayout>